modifying styles in html and adding the toFixed method in totals

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       <!--Section - Reports-->
       <section
         id="reports-section"
-        class="hidden flex-col mx-6 my-20 pl-10 pb-1 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:pr-10 lg:pl-24 lg:pt-5 lg:my-20"
+        class="hidden flex-col mx-6 my-20 px-8 pb-1 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:pr-10 lg:pl-24 lg:pt-5 lg:my-20"
       >
         <h2 class="py-4 pt-6 pb-10 text-4xl font-bold">Reportes</h2>
         <div class="any-reports hidden">
